--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,3 +1,9 @@
-<p>
-  table works!
-</p>
+<table class="floodTable">
+  <thead><th>Flood<br>Event</th><th>Population<br>Exposed</th></thead>
+  <tbody>
+    <tr><td>01-Oct-2001</td><td>56980</td></tr>
+    <tr><td>12-Oct-2002</td><td>56980</td></tr>
+    <tr><td>05-Nov-2003</td><td>56980</td></tr>
+    <tr><td>20-Mar-2007</td><td>56980</td></tr>
+  </tbody>
+</table>
