--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,4 +1,4 @@
-<table class="floodTable">
+<table class="floodTable" cellpadding=5>
   <thead><th>Flood<br>Event</th><th>Population<br>Exposed</th></thead>
   <tbody>
     <tr><td>01-Oct-2001</td><td>56980</td></tr>
