--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,15 @@
 :host {
-    overflow: hidden;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    
 }
-
-.title {
-    float: right;
+.content {
+    flex:1;
+    display: flex;
+}
+.content md-grid-list {
+    flex: 1
 }
 md-grid-tile {
     border-top: 1pt solid darkslategray;
