--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
     <md-grid-tile colspan="3" rowspan="6">
       <app-controls></app-controls>
     </md-grid-tile>
-    <md-grid-tile colspan="6" rowspan="3">
+    <md-grid-tile class="chart" colspan="6" rowspan="3">
       <app-chart></app-chart>
     </md-grid-tile>
-    <md-grid-tile colspan="3" rowspan="3">
+    <md-grid-tile class="table" colspan="3" rowspan="3">
       <app-table></app-table>
     </md-grid-tile>
   </md-grid-list>
