--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,1 +1,5 @@
-<img class="chartImg" src="assets/data/precip_pngs/Precip_from_20011001_to_20011201.png">
+<img class="chartImg" 
+    src="assets/data/precip_pngs/Precip_from_20011001_to_20011201.png">
+<img class="chartImg" 
+    src="assets/data/precip_pngs/Precip_from_20011001_to_20011201.png">
+
